--- a/blog/065.md
+++ b/blog/065.md
@@ -7,4 +7,11 @@ _2017-03-30 15:13:04_
 
 * * *
 
-content
+真正的注册码和破解方法我确实没有找到，尝试了百度与谷歌均以失败告终，带有欺骗性的文章与下载太多啦，此时同事提供了总能免费试用的方法，这里分享给大家。
+
+```
+cd ~/Library/Application\ Support/Beyond\ Compare/
+rm registry.dat
+```
+
+恭喜你，你又可以免费试用 30 天啦。
